--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,8 @@
     "@babel/node": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
