--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "start": "nodemon --exec babel-node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "node build/index.js",
-    "build": "babel src --out-dir build"
+    "build": "babel src --out-dir build",
+    "lint": "eslint ./"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
     "@babel/core": "^7.7.7",
     "@babel/node": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
+    "eslint": "^6.7.2",
     "nodemon": "^2.0.2"
   },
   "dependencies": {
