added frontend tests with redux-mock-store

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,5 +36,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:4000"
+  "proxy": "http://localhost:4000",
+  "devDependencies": {
+    "redux-mock-store": "^1.5.4",
+    "xhr-mock": "^2.5.1"
+  }
 }
